--- a/localisation/mod/english/02_emex_l_english.yml
+++ b/localisation/mod/english/02_emex_l_english.yml
@@ -744,6 +744,26 @@
 
  EMEX_SEEDED_PATH2: "Familiar Distress Signal"
  EMEX_SEEDED_PATH2_DESC: "A distress signal quite similar to that used by our own ships can be detected emitting from this gas giant. The strange exosphere's unusually high density makes it difficult to obtain any visual indication of alien presence."
+ emex_origin2.200.name: "Familiar Distress Signal"
+ emex_origin2.200.desc: "Upon approaching §Y[fromfrom.GetName]§!, the [This.GetName] detected the presence of a large array of artificial constructs all over the planet. To investigate further, a closer survey of the gas giant was required. The initial descent through the mauve, gaseous atmosphere was long and treacherous due to the thunderstorms raging on around the planet, yet there was a large, towering structure waiting for us, floating in a cloud of debris and scrap.\n\nThe planet has extremely high gravity, and conducting an in-depth exploration of the world will need a dedicated team with equipment allowing prolonged survival on [fromfrom.GetName]. However, there is no doubt a lot to discover here."
+ emex_origin2.200.1: "Interesting. We must investigate."
+ emex_seeder_sp2_digsite: "Derelict Cloud City"
+ emex_seeder_sp2_digsite_desc: "[This.GetName] is a gas giant that is home to an array of floating platforms and stations seemingly from centuries past. While most of the larger platforms remain somewhat stable, there are several massive debris fields and broken-down ships that were clearly involved in some sort of conflict or calamity."
+ emex_origin2.201.name: "An Initial Exploration"
+ emex_origin2.201.desc: "Our exploration drones surveying the ancient debris within the atmosphere of [This.GetName] have discovered very little among the debris. The lack of resources, any notable goods and even individuals aboard the ships suggests that they were not involved in cargo or civilian transport.\n\nHowever, there is also a strong lack of military weapons; what little there is could be brushed off as basic ship defences. Either these debris fields have already been scavenged some time after this calamity, or these vessels were used for some other, unknown purpose.\n\nWhile there may be some information to gather, or at the very least resource to scrap, it may be wiser to move to investigate the larger towers still standing safely, nearby the debris."
+ emex_origin2.201.1: "Move onto the towers."
+ emex_origin2.201.2: "Search the debris, scrap what you can."
+ emex_origin2.202.name: "Cloud City Exploration"
+ emex_origin2.202.A.desc: "Our drones on [This.GetName] have concluded their atmospheric search through the derelict ships and debris clouds all over the gas giant. As expected, most of the vessels lacked anything of use, but some of the basic weaponry found on the ships, alongisde some of the hull materials, could be used for our own purposes once melted down.\n\nFurthermore, one of the vessels we searched was hiding a number of alien corpses! Most of their bodies have withered away, leaving little to no flesh, but no doubt will these foreign bodies prove useful for our biological research." # todo
+ emex_origin2.202.B.desc: "" # todo
+ emex_origin2.202.1: "Continue through the complex."
+ emex_origin2.202.2: "Good, now to the towers."
+ emex_origin2.203.name: "The Command Tower"
+ emex_origin2.203.desc: "" # todo
+ emex_origin2.203.1: "We must breach this wall."
+ emex_origin2.204.name: "The Evolutionary"
+ emex_origin2.204.desc: "" # todo
+ emex_origin2.204.1: "Interesting..."
 
  EMEX_SEEDED_PATH3: "Remains of a Grand Fleet"
  EMEX_SEEDED_PATH3_DESC: "This star system houses a magnificiently massive debris field of various ships, seemingly of different origins. Their heavy concentration near some asteroids suggest that there may be more present here than we may think."
